coorecting json declaration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # mongodb configuration
-spring.data.mongodb.uri=mongodb://mongodb/demorest
-spring.data.mongodb.database=demorest
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.datasource.driverClassName=MongoDB
+#spring.data.mongodb.uri=mongodb://192.168.99.100/demorest
+spring.data.mongodb.uri=mongodb+srv://aspakMongoUser:aspakMongoUser@aspakaccenture-slbbx.mongodb.net/myStudent?retryWrites=true&w=majority
+spring.data.mongodb.database=myStudent
+#spring.data.mongodb.host=mongodb
+#spring.data.mongodb.port=27017
+#spring.datasource.driverClassName=MongoDB
+server.port=8081
